# Agentrix-Clawlink

./: .cursorrules  .easignore  .env.prod  .env.production.ready  .gitignore  .tmp_ss_8388_clean.json  .txt  0-配置Git用户信息.bat  =1450  AGENTRIX_CLAW_PRD.md  AGENTRIX_COMMERCE_MOBILE_CONSOLIDATED_DOC.md  AGENTRIX_COMMERCE_SKILL_PRD.md  AGENTRIX_COMMISSION_ARCHITECTURE.md  AGENTRIX_COMPETITIVE_ANALYSIS_2026.md  AGENTRIX_HQ_REFACTOR_V2.md  AGENTRIX_MARKETPLACE_V2_UPGRADE_PLAN.md  AGENTRIX_MCP_DEVELOPMENT_PLAN.md  AGENTRIX_MCP_ECOSYSTEM_PRD.md  AGENTRIX_MCP_TECH_DESIGN.md  AGENTRIX_MERCHANT_DEVELOPER_OPTIMIZATION_V2.md  AGENTRIX_MOBILE_APP_PRD.md  AGENTRIX_MOBILE_APP_PRD_V2.md  AGENTRIX_PAYMENT_IMPROVEMENT_PLAN.md  AGENTRIX_PAYMENT_V1_ARCH_DESIGN.md  AGENTRIX_PAYMENT_V1_ARCH_DESIGN_temp.md  AGENTRIX_PAYMENT_V1_MANUAL_TASKS.md  AGENTRIX_PAYMENT_V1_TODO.md  AGENTRIX_SKILL_ECOSYSTEM_STRATEGIC_PLAN.md  AGENTRIX_SKILL_ECOSYSTEM_STRATEGIC_PLAN_V1_ARCHIVED.md  AGENTRIX_SKILL_MARKETPLACE_UI_OPTIMIZATION.md  AGENTRIX_UI_COMMERCE_OPTIMIZATION_V1.md  AGENTRIX_UI_INFORMATION_ARCHITECTURE_V3.md  AGENTRIX_UI_OPTIMIZATION_V2_UPDATED.md  AGENTRIX_UI_REFACTOR_IMPLEMENTATION.md  AGENTRIX_UI_REFACTOR_PLAN.md  AGENTRIX_UI_REFACTOR_STATUS.md  AGENTRIX_UI_SYSTEMATIC_OPTIMIZATION_PLAN_V4.md  AGENTRIX_V2_GAP_ANALYSIS.md  AGENTRIX_WHITEPAPER.md  AGENTRIX_WORKBENCH_DEV_DOC.md  (+1128 more)
.cursor/: README.md
.github/: copilot-instructions.md
.maestro/: 01-launch.yaml  02-auth-screen.yaml  03-input-validation.yaml  04-navigation-tabs.yaml
agentrixfrontend/: package-lock.json  start-production.sh  tailwind.config.js
android/: build.gradle  gradle.properties  local.properties  settings.gradle
architecture/: README.md  product-architecture.mmd  technical-architecture.mmd
arn-protocol/: MIGRATION.md  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
assets/: README.md  generate-placeholders.js
backend/: .env.ai-engines  .env.backup  .env.bak  .env.development.example  .env.example  .env.prod  .gitignore  API_SPEC.md  Dockerfile  INSTALL_GROQ.md  README.md  SWAGGER_TROUBLESHOOTING.md  _check_es2.js  _check_eventstream.js  _gen_jwt.js  add-developer-role.sql  add-merchant-id.sql  agentrix.pem  apply-migration.sh  backend_prod_log.txt  build.sh  check-agent-stats.sql  check-cols.sql  check-columns.sql  check-commission.js  check-db-columns.ts  check-final.sql  check-hash.js  check-modules.ts  check-relayer.js  check-rpc.ts  check-sample-skills.sql  check-selector.js  check-skills-columns.sql  check-skills-detail.sql  check-skills.sql  check-tables.sql  check-wallet-table.js  check_deps.js  cleanup-monitor.sql  (+122 more)
ci_logs/: 2_🔨 Build APK.txt
contract/: .gitignore  AGENT_ECOSYSTEM_STANDARDIZATION_ROADMAP.md  DEPLOYMENT_GUIDE_BSC.md  DEPLOYMENT_SUMMARY.md  PAYMENT_FLOW_ANALYSIS.md  README.md  SECURITY_AUDIT_REPORT.md  package.json  (+5 more)
desktop-installer/src-tauri/: Cargo.toml  tauri.conf.json
desktop-installer/src-tauri/src/: commands.rs  installer.rs  lib.rs  main.rs  qr_bridge.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/keys/: agentrix.key.pub
desktop/src-tauri/permissions/: desktop-commands.toml
desktop/src-tauri/permissions/autogenerated/: desktop_bridge_close_chat_panel.toml  desktop_bridge_create_pair_session.toml  desktop_bridge_delete_auth_token.toml  desktop_bridge_get_active_window.toml  desktop_bridge_get_auth_token.toml  desktop_bridge_get_ball_position.toml  desktop_bridge_get_clipboard_text.toml  desktop_bridge_get_context.toml  desktop_bridge_list_windows.toml  desktop_bridge_log_debug_event.toml  desktop_bridge_open_browser.toml  desktop_bridge_open_chat_panel.toml  desktop_bridge_password_login.toml  desktop_bridge_poll_pair_session.toml  desktop_bridge_read_file.toml  desktop_bridge_run_command.toml  desktop_bridge_set_auth_token.toml  desktop_bridge_set_ball_position.toml  desktop_bridge_set_panel_position_near_ball.toml  desktop_bridge_write_file.toml
desktop/src-tauri/src/: commands.rs  lib.rs  lib.rs.bak  main.rs  mdns.rs
(+4249 files in other folders)
