[package]
name = "agentrix-desktop"
version = "0.1.0"
edition = "2021"
description = "Agentrix Desktop 鈥?AI Agent floating ball"

[lib]
name = "agentrix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentrix-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "custom-protocol"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"
